# pot-app-translate-plugin-tencent

./: Cargo.toml  README.md  info.json  main.js  mian.js
src/: lib.rs
